src/kernel/test/wlr/wayland.jl


@cenum wl_shm_format::UInt32 begin
    WL_SHM_FORMAT_ARGB8888 = 0
    WL_SHM_FORMAT_XRGB8888 = 1
    WL_SHM_FORMAT_C8 = 538982467
    WL_SHM_FORMAT_RGB332 = 943867730
    WL_SHM_FORMAT_BGR233 = 944916290
    WL_SHM_FORMAT_XRGB4444 = 842093144
    WL_SHM_FORMAT_XBGR4444 = 842089048
    WL_SHM_FORMAT_RGBX4444 = 842094674
    WL_SHM_FORMAT_BGRX4444 = 842094658
    WL_SHM_FORMAT_ARGB4444 = 842093121
    WL_SHM_FORMAT_ABGR4444 = 842089025
    WL_SHM_FORMAT_RGBA4444 = 842088786
    WL_SHM_FORMAT_BGRA4444 = 842088770
    WL_SHM_FORMAT_XRGB1555 = 892424792
    WL_SHM_FORMAT_XBGR1555 = 892420696
    WL_SHM_FORMAT_RGBX5551 = 892426322
    WL_SHM_FORMAT_BGRX5551 = 892426306
    WL_SHM_FORMAT_ARGB1555 = 892424769
    WL_SHM_FORMAT_ABGR1555 = 892420673
    WL_SHM_FORMAT_RGBA5551 = 892420434
    WL_SHM_FORMAT_BGRA5551 = 892420418
    WL_SHM_FORMAT_RGB565 = 909199186
    WL_SHM_FORMAT_BGR565 = 909199170
    WL_SHM_FORMAT_RGB888 = 875710290
    WL_SHM_FORMAT_BGR888 = 875710274
    WL_SHM_FORMAT_XBGR8888 = 875709016
    WL_SHM_FORMAT_RGBX8888 = 875714642
    WL_SHM_FORMAT_BGRX8888 = 875714626
    WL_SHM_FORMAT_ABGR8888 = 875708993
    WL_SHM_FORMAT_RGBA8888 = 875708754
    WL_SHM_FORMAT_BGRA8888 = 875708738
    WL_SHM_FORMAT_XRGB2101010 = 808669784
    WL_SHM_FORMAT_XBGR2101010 = 808665688
    WL_SHM_FORMAT_RGBX1010102 = 808671314
    WL_SHM_FORMAT_BGRX1010102 = 808671298
    WL_SHM_FORMAT_ARGB2101010 = 808669761
    WL_SHM_FORMAT_ABGR2101010 = 808665665
    WL_SHM_FORMAT_RGBA1010102 = 808665426
    WL_SHM_FORMAT_BGRA1010102 = 808665410
    WL_SHM_FORMAT_YUYV = 1448695129
    WL_SHM_FORMAT_YVYU = 1431918169
    WL_SHM_FORMAT_UYVY = 1498831189
    WL_SHM_FORMAT_VYUY = 1498765654
    WL_SHM_FORMAT_AYUV = 1448433985
    WL_SHM_FORMAT_NV12 = 842094158
    WL_SHM_FORMAT_NV21 = 825382478
    WL_SHM_FORMAT_NV16 = 909203022
    WL_SHM_FORMAT_NV61 = 825644622
    WL_SHM_FORMAT_YUV410 = 961959257
    WL_SHM_FORMAT_YVU410 = 961893977
    WL_SHM_FORMAT_YUV411 = 825316697
    WL_SHM_FORMAT_YVU411 = 825316953
    WL_SHM_FORMAT_YUV420 = 842093913
    WL_SHM_FORMAT_YVU420 = 842094169
    WL_SHM_FORMAT_YUV422 = 909202777
    WL_SHM_FORMAT_YVU422 = 909203033
    WL_SHM_FORMAT_YUV444 = 875713881
    WL_SHM_FORMAT_YVU444 = 875714137
    WL_SHM_FORMAT_R8 = 538982482
    WL_SHM_FORMAT_R16 = 540422482
    WL_SHM_FORMAT_RG88 = 943212370
    WL_SHM_FORMAT_GR88 = 943215175
    WL_SHM_FORMAT_RG1616 = 842221394
    WL_SHM_FORMAT_GR1616 = 842224199
    WL_SHM_FORMAT_XRGB16161616F = 1211388504
    WL_SHM_FORMAT_XBGR16161616F = 1211384408
    WL_SHM_FORMAT_ARGB16161616F = 1211388481
    WL_SHM_FORMAT_ABGR16161616F = 1211384385
    WL_SHM_FORMAT_XYUV8888 = 1448434008
    WL_SHM_FORMAT_VUY888 = 875713878
    WL_SHM_FORMAT_VUY101010 = 808670550
    WL_SHM_FORMAT_Y210 = 808530521
    WL_SHM_FORMAT_Y212 = 842084953
    WL_SHM_FORMAT_Y216 = 909193817
    WL_SHM_FORMAT_Y410 = 808531033
    WL_SHM_FORMAT_Y412 = 842085465
    WL_SHM_FORMAT_Y416 = 909194329
    WL_SHM_FORMAT_XVYU2101010 = 808670808
    WL_SHM_FORMAT_XVYU12_16161616 = 909334104
    WL_SHM_FORMAT_XVYU16161616 = 942954072
    WL_SHM_FORMAT_Y0L0 = 810299481
    WL_SHM_FORMAT_X0L0 = 810299480
    WL_SHM_FORMAT_Y0L2 = 843853913
    WL_SHM_FORMAT_X0L2 = 843853912
    WL_SHM_FORMAT_YUV420_8BIT = 942691673
    WL_SHM_FORMAT_YUV420_10BIT = 808539481
    WL_SHM_FORMAT_XRGB8888_A8 = 943805016
    WL_SHM_FORMAT_XBGR8888_A8 = 943800920
    WL_SHM_FORMAT_RGBX8888_A8 = 943806546
    WL_SHM_FORMAT_BGRX8888_A8 = 943806530
    WL_SHM_FORMAT_RGB888_A8 = 943798354
    WL_SHM_FORMAT_BGR888_A8 = 943798338
    WL_SHM_FORMAT_RGB565_A8 = 943797586
    WL_SHM_FORMAT_BGR565_A8 = 943797570
    WL_SHM_FORMAT_NV24 = 875714126
    WL_SHM_FORMAT_NV42 = 842290766
    WL_SHM_FORMAT_P210 = 808530512
    WL_SHM_FORMAT_P010 = 808530000
    WL_SHM_FORMAT_P012 = 842084432
    WL_SHM_FORMAT_P016 = 909193296
end


struct wl_shm_listener
    format::Ptr{Cvoid}
end

struct wl_buffer_listener
    release::Ptr{Cvoid}
end

@cenum wl_data_offer_error::UInt32 begin
    WL_DATA_OFFER_ERROR_INVALID_FINISH = 0
    WL_DATA_OFFER_ERROR_INVALID_ACTION_MASK = 1
    WL_DATA_OFFER_ERROR_INVALID_ACTION = 2
    WL_DATA_OFFER_ERROR_INVALID_OFFER = 3
end


struct wl_data_offer_listener
    offer::Ptr{Cvoid}
    source_actions::Ptr{Cvoid}
    action::Ptr{Cvoid}
end

@cenum wl_data_source_error::UInt32 begin
    WL_DATA_SOURCE_ERROR_INVALID_ACTION_MASK = 0
    WL_DATA_SOURCE_ERROR_INVALID_SOURCE = 1
end


struct wl_data_source_listener
    target::Ptr{Cvoid}
    send::Ptr{Cvoid}
    cancelled::Ptr{Cvoid}
    dnd_drop_performed::Ptr{Cvoid}
    dnd_finished::Ptr{Cvoid}
    action::Ptr{Cvoid}
end

@cenum wl_data_device_error::UInt32 begin
    WL_DATA_DEVICE_ERROR_ROLE = 0
end


struct wl_data_device_listener
    data_offer::Ptr{Cvoid}
    enter::Ptr{Cvoid}
    leave::Ptr{Cvoid}
    motion::Ptr{Cvoid}
    drop::Ptr{Cvoid}
    selection::Ptr{Cvoid}
end

@cenum wl_data_device_manager_dnd_action::UInt32 begin
    WL_DATA_DEVICE_MANAGER_DND_ACTION_NONE = 0
    WL_DATA_DEVICE_MANAGER_DND_ACTION_COPY = 1
    WL_DATA_DEVICE_MANAGER_DND_ACTION_MOVE = 2
    WL_DATA_DEVICE_MANAGER_DND_ACTION_ASK = 4
end

@cenum wl_shell_error::UInt32 begin
    WL_SHELL_ERROR_ROLE = 0
end

@cenum wl_shell_surface_resize::UInt32 begin
    WL_SHELL_SURFACE_RESIZE_NONE = 0
    WL_SHELL_SURFACE_RESIZE_TOP = 1
    WL_SHELL_SURFACE_RESIZE_BOTTOM = 2
    WL_SHELL_SURFACE_RESIZE_LEFT = 4
    WL_SHELL_SURFACE_RESIZE_TOP_LEFT = 5
    WL_SHELL_SURFACE_RESIZE_BOTTOM_LEFT = 6
    WL_SHELL_SURFACE_RESIZE_RIGHT = 8
    WL_SHELL_SURFACE_RESIZE_TOP_RIGHT = 9
    WL_SHELL_SURFACE_RESIZE_BOTTOM_RIGHT = 10
end

@cenum wl_shell_surface_transient::UInt32 begin
    WL_SHELL_SURFACE_TRANSIENT_INACTIVE = 1
end

@cenum wl_shell_surface_fullscreen_method::UInt32 begin
    WL_SHELL_SURFACE_FULLSCREEN_METHOD_DEFAULT = 0
    WL_SHELL_SURFACE_FULLSCREEN_METHOD_SCALE = 1
    WL_SHELL_SURFACE_FULLSCREEN_METHOD_DRIVER = 2
    WL_SHELL_SURFACE_FULLSCREEN_METHOD_FILL = 3
end


struct wl_shell_surface_listener
    ping::Ptr{Cvoid}
    configure::Ptr{Cvoid}
    popup_done::Ptr{Cvoid}
end

@cenum wl_surface_error::UInt32 begin
    WL_SURFACE_ERROR_INVALID_SCALE = 0
    WL_SURFACE_ERROR_INVALID_TRANSFORM = 1
end


struct wl_surface_listener
    enter::Ptr{Cvoid}
    leave::Ptr{Cvoid}
end

@cenum wl_seat_capability::UInt32 begin
    WL_SEAT_CAPABILITY_POINTER = 1
    WL_SEAT_CAPABILITY_KEYBOARD = 2
    WL_SEAT_CAPABILITY_TOUCH = 4
end


struct wl_seat_listener
    capabilities::Ptr{Cvoid}
    name::Ptr{Cvoid}
end

@cenum wl_pointer_error::UInt32 begin
    WL_POINTER_ERROR_ROLE = 0
end

@cenum wl_pointer_button_state::UInt32 begin
    WL_POINTER_BUTTON_STATE_RELEASED = 0
    WL_POINTER_BUTTON_STATE_PRESSED = 1
end

@cenum wl_pointer_axis::UInt32 begin
    WL_POINTER_AXIS_VERTICAL_SCROLL = 0
    WL_POINTER_AXIS_HORIZONTAL_SCROLL = 1
end

@cenum wl_pointer_axis_source::UInt32 begin
    WL_POINTER_AXIS_SOURCE_WHEEL = 0
    WL_POINTER_AXIS_SOURCE_FINGER = 1
    WL_POINTER_AXIS_SOURCE_CONTINUOUS = 2
    WL_POINTER_AXIS_SOURCE_WHEEL_TILT = 3
end


struct wl_pointer_listener
    enter::Ptr{Cvoid}
    leave::Ptr{Cvoid}
    motion::Ptr{Cvoid}
    button::Ptr{Cvoid}
    axis::Ptr{Cvoid}
    frame::Ptr{Cvoid}
    axis_source::Ptr{Cvoid}
    axis_stop::Ptr{Cvoid}
    axis_discrete::Ptr{Cvoid}
end

@cenum wl_keyboard_keymap_format::UInt32 begin
    WL_KEYBOARD_KEYMAP_FORMAT_NO_KEYMAP = 0
    WL_KEYBOARD_KEYMAP_FORMAT_XKB_V1 = 1
end

@cenum wl_keyboard_key_state::UInt32 begin
    WL_KEYBOARD_KEY_STATE_RELEASED = 0
    WL_KEYBOARD_KEY_STATE_PRESSED = 1
end


struct wl_keyboard_listener
    keymap::Ptr{Cvoid}
    enter::Ptr{Cvoid}
    leave::Ptr{Cvoid}
    key::Ptr{Cvoid}
    modifiers::Ptr{Cvoid}
    repeat_info::Ptr{Cvoid}
end

struct wl_touch_listener
    down::Ptr{Cvoid}
    up::Ptr{Cvoid}
    motion::Ptr{Cvoid}
    frame::Ptr{Cvoid}
    cancel::Ptr{Cvoid}
    shape::Ptr{Cvoid}
    orientation::Ptr{Cvoid}
end

@cenum wl_output_subpixel::UInt32 begin
    WL_OUTPUT_SUBPIXEL_UNKNOWN = 0
    WL_OUTPUT_SUBPIXEL_NONE = 1
    WL_OUTPUT_SUBPIXEL_HORIZONTAL_RGB = 2
    WL_OUTPUT_SUBPIXEL_HORIZONTAL_BGR = 3
    WL_OUTPUT_SUBPIXEL_VERTICAL_RGB = 4
    WL_OUTPUT_SUBPIXEL_VERTICAL_BGR = 5
end

@cenum wl_output_transform::UInt32 begin
    WL_OUTPUT_TRANSFORM_NORMAL = 0
    WL_OUTPUT_TRANSFORM_90 = 1
    WL_OUTPUT_TRANSFORM_180 = 2
    WL_OUTPUT_TRANSFORM_270 = 3
    WL_OUTPUT_TRANSFORM_FLIPPED = 4
    WL_OUTPUT_TRANSFORM_FLIPPED_90 = 5
    WL_OUTPUT_TRANSFORM_FLIPPED_180 = 6
    WL_OUTPUT_TRANSFORM_FLIPPED_270 = 7
end

@cenum wl_output_mode::UInt32 begin
    WL_OUTPUT_MODE_CURRENT = 1
    WL_OUTPUT_MODE_PREFERRED = 2
end


struct wl_output_listener
    geometry::Ptr{Cvoid}
    mode::Ptr{Cvoid}
    done::Ptr{Cvoid}
    scale::Ptr{Cvoid}
end

@cenum wl_subcompositor_error::UInt32 begin
    WL_SUBCOMPOSITOR_ERROR_BAD_SURFACE = 0
end

@cenum wl_subsurface_error::UInt32 begin
    WL_SUBSURFACE_ERROR_BAD_SURFACE = 0
end


const wl_cursor_theme = Cvoid

struct wl_cursor_image
    width::UInt32
    height::UInt32
    hotspot_x::UInt32
    hotspot_y::UInt32
    delay::UInt32
end

struct wl_cursor
    image_count::UInt32
    images::Ptr{Ptr{wl_cursor_image}}
    name::Cstring
end

const WL_EGL_WINDOW_VERSION = 3

struct wl_egl_window
    version::Ptr{Cint}
    width::Cint
    height::Cint
    dx::Cint
    dy::Cint
    attached_width::Cint
    attached_height::Cint
    driver_private::Ptr{Cvoid}
    resize_callback::Ptr{Cvoid}
    destroy_window_callback::Ptr{Cvoid}
    surface::Ptr{wl_surface}
end

const WL_EGL_PLATFORM = 1
const WL_DISPLAY_ERROR = 0
const WL_DISPLAY_DELETE_ID = 1
const WL_REGISTRY_GLOBAL = 0
const WL_REGISTRY_GLOBAL_REMOVE = 1
const WL_CALLBACK_DONE = 0
const WL_SHM_FORMAT = 0
const WL_BUFFER_RELEASE = 0
const WL_DATA_OFFER_OFFER = 0
const WL_DATA_OFFER_SOURCE_ACTIONS = 1
const WL_DATA_OFFER_ACTION = 2
const WL_DATA_SOURCE_TARGET = 0
const WL_DATA_SOURCE_SEND = 1
const WL_DATA_SOURCE_CANCELLED = 2
const WL_DATA_SOURCE_DND_DROP_PERFORMED = 3
const WL_DATA_SOURCE_DND_FINISHED = 4
const WL_DATA_SOURCE_ACTION = 5
const WL_DATA_DEVICE_DATA_OFFER = 0
const WL_DATA_DEVICE_ENTER = 1
const WL_DATA_DEVICE_LEAVE = 2
const WL_DATA_DEVICE_MOTION = 3
const WL_DATA_DEVICE_DROP = 4
const WL_DATA_DEVICE_SELECTION = 5
const WL_SHELL_SURFACE_PING = 0
const WL_SHELL_SURFACE_CONFIGURE = 1
const WL_SHELL_SURFACE_POPUP_DONE = 2
const WL_SURFACE_ENTER = 0
const WL_SURFACE_LEAVE = 1
const WL_SEAT_CAPABILITIES = 0
const WL_SEAT_NAME = 1
const WL_POINTER_ENTER = 0
const WL_POINTER_LEAVE = 1
const WL_POINTER_MOTION = 2
const WL_POINTER_BUTTON = 3
const WL_POINTER_AXIS = 4
const WL_POINTER_FRAME = 5
const WL_POINTER_AXIS_SOURCE = 6
const WL_POINTER_AXIS_STOP = 7
const WL_POINTER_AXIS_DISCRETE = 8
const WL_KEYBOARD_KEYMAP = 0
const WL_KEYBOARD_ENTER = 1
const WL_KEYBOARD_LEAVE = 2
const WL_KEYBOARD_KEY = 3
const WL_KEYBOARD_MODIFIERS = 4
const WL_KEYBOARD_REPEAT_INFO = 5
const WL_TOUCH_DOWN = 0
const WL_TOUCH_UP = 1
const WL_TOUCH_MOTION = 2
const WL_TOUCH_FRAME = 3
const WL_TOUCH_CANCEL = 4
const WL_TOUCH_SHAPE = 5
const WL_TOUCH_ORIENTATION = 6
const WL_OUTPUT_GEOMETRY = 0
const WL_OUTPUT_MODE = 1
const WL_OUTPUT_DONE = 2
const WL_OUTPUT_SCALE = 3

struct wl_display_interface
    sync::Ptr{Cvoid}
    get_registry::Ptr{Cvoid}
end

struct wl_registry_interface
    bind::Ptr{Cvoid}
end

struct wl_compositor_interface
    create_surface::Ptr{Cvoid}
    create_region::Ptr{Cvoid}
end

struct wl_shm_pool_interface
    create_buffer::Ptr{Cvoid}
    destroy::Ptr{Cvoid}
    resize::Ptr{Cvoid}
end

struct wl_shm_interface
    create_pool::Ptr{Cvoid}
end

struct wl_buffer_interface
    destroy::Ptr{Cvoid}
end

struct wl_data_offer_interface
    accept::Ptr{Cvoid}
    receive::Ptr{Cvoid}
    destroy::Ptr{Cvoid}
    finish::Ptr{Cvoid}
    set_actions::Ptr{Cvoid}
end

struct wl_data_source_interface
    offer::Ptr{Cvoid}
    destroy::Ptr{Cvoid}
    set_actions::Ptr{Cvoid}
end
